Modifying the code using the SOLID principle
Commit changes:
1. Moved the creation of Car-type objects from the controller to the SOLID service
2. Removed @RequestParam excess annotation from service